--- a/src/styles/product.module.css
+++ b/src/styles/product.module.css
@@ -40,3 +40,17 @@
     font-weight: 600;
     color: #683B2B;
 }
+@media (max-width: 400px) {
+    .productContainer{
+        height: 100px;
+    }
+    .title{
+        font-size: 14px;
+    }
+    .textContainer{
+        padding: 0 20px;
+    }
+    .price{
+        font-size: 14px;
+    }
+}
